--- a/.devcontainer/Assets/styles/style.css
+++ b/.devcontainer/Assets/styles/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  font-family: "Phudu", sans-serif;
+  font-family: "Oswald", sans-serif;
   margin: 0;
   padding: 0;
   height: 100%;
@@ -44,6 +44,9 @@ li {
   border-bottom: 2px solid;
   color: rgb(216, 14, 14);
   background-color: rgb(0, 0, 0);
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .navbar-nav .nav-link.active,
@@ -103,7 +106,7 @@ li {
 #home-header {
   margin-bottom: 0;
   color: #e6e6e6;
-  font-family: "Phudu", sans-serif;
+  font-family: "Ultra", sans-serif;
   font-size: 3rem;
 }
 
@@ -111,7 +114,7 @@ li {
   font-size: 12px;
   margin-bottom: 15px;
   color: #e6e6e6;
-  font-family: "Phudu", sans-serif;
+  font-family: "Ultra", sans-serif;
   font-size: 1rem;
 }
 
@@ -120,8 +123,8 @@ li {
   background: black;
   color: rgb(216, 14, 14);
   border: 1.5px solid rgb(216, 14, 14);
-  font-family: "Phudu", sans-serif;
-  font-weight: 600;
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
 }
 
 .btn:hover,
@@ -143,20 +146,24 @@ li {
   font-size: 1.5rem;
   margin-bottom: 0;
   padding-bottom: 15px;
-  font-family: "Phudu", sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
 #about-text {
+  font-weight: 300;
   font-size: 1rem;
+  margin: 1rem 0;
 }
 
 #gallery-header h1 {
-  margin: 20px 0 30px 0;
+  margin: 20px 0 50px 0;
 }
 
 #gallery-details img {
   border-radius: 5px;
   border: 1px solid rgba(216, 14, 14, 0.4);
+  width: 15rem;
+  height: 18rem;
 }
 
 .about-container,
@@ -175,7 +182,7 @@ li {
   display: flex;
   flex-wrap: wrap;
   padding: 0 4px;
-  margin: 10px;
+  margin: 30px 10px;
 }
 
 /* Create four equal columns that sits next to each other */
@@ -222,7 +229,7 @@ li {
 
 /* background linear gradient copied from stackoverflow. https://stackoverflow.com/questions/36679649/how-to-add-a-color-overlay-to-a-background-image/36679903#36679903  */
 .open-container {
-  background: url(images/openchampimage3.jpg) no-repeat center,
+  background: url(images/golfballfield.jpg) no-repeat center,
     linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
   background-blend-mode: overlay;
   left: 0;
@@ -231,19 +238,20 @@ li {
   margin: 0 auto;
   /* padding: 20px; */
   color: #e6e6e6;
+  border-top: 2px solid rgba(216, 14, 14);
 }
 
 .gallery-title {
   font-size: 3rem;
   margin: 20px 20px 0px 20px;
   font-weight: 700;
-  font-family: "Phudu", sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
 .gallery-header {
   font-size: 3rem;
   font-weight: 700;
-  font-family: "Phudu", sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
 .open-title {
@@ -251,6 +259,8 @@ li {
   font-size: 2rem;
   font-weight: 700;
 }
+
+/* https://codepen.io/pa_patki/pen/GxVMEo - used to create image gallery with modal */
 
 /* used from stackoverflow */
 
@@ -313,7 +323,7 @@ li {
   height: 100vh;
   margin: auto;
 
-  background: url(images/golf2.jpg) no-repeat center,
+  background: url(images/Golf-Group.jpg) no-repeat center,
     linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
   background-blend-mode: overlay;
   background-size: cover;
@@ -333,8 +343,9 @@ li {
 
 .form-container {
   margin: auto;
+  margin-bottom: 30px;
   width: 90%;
-  height: 55%;
+  height: 50%;
   padding: 10px;
   position: relative;
 }
@@ -346,29 +357,85 @@ li {
 .apply-container {
   padding: 15px;
   margin: auto;
+  margin-top: 35px;
 }
 
 .apply-header {
   text-align: center;
   color: white;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   font-weight: 700;
 }
 
-.apply-text {
+.apply-container > p {
   color: white;
-  font-size: 0.85rem;
-  font-weight: 500;
+  font-size: 1rem;
+  font-weight: 300;
   text-align: center;
   margin-top: 15px;
 }
 
 .app-download {
-  background-color: #e6e6e6;
   color: rgb(216, 14, 14);
-  font-weight: 700;
+  font-weight: 400;
   padding: 2px;
-  margin-top: 5px;
+  margin-top: 10px;
+}
+
+.remember-device {
+  width: 100%;
+  margin: auto;
+  position: relative;
+}
+
+/* #form-details {
+  width: 70%;
+  margin: auto;
+} */
+
+#members-header {
+  margin-bottom: 0;
+  color: #e6e6e6;
+  font-family: "Ultra", sans-serif;
+  font-size: 3rem;
+}
+
+#members-text {
+  font-size: 12px;
+  margin-bottom: 15px;
+  color: #e6e6e6;
+  font-family: "Oswald", sans-serif;
+  font-size: 1rem;
+}
+
+/* MEMBERS MEDIA QUERIES */
+@media screen and (max-width: 320px) {
+  #home-header {
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .apply-text {
+    font-size: 14px;
+  }
+
+  .members-container {
+    padding: 5px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  #form-details {
+    width: 50%;
+    margin: auto;
+  }
+
+  .apply-text {
+    width: 75%;
+    margin: auto;
+    height: 100%;
+  }
 }
 
 /*  FOOTER and SOCIALS */
@@ -392,4 +459,6 @@ li {
 
 #line-break {
   border-bottom: 1px solid rgb(216, 14, 14);
+  width: 80%;
+  margin: auto;
 }
