--- a/.devcontainer/Assets/styles/style.css
+++ b/.devcontainer/Assets/styles/style.css
@@ -31,7 +31,6 @@ li {
   float: right;
   text-align: right;
   font-size: 16px;
-  /* text-transform: uppercase; */
 }
 
 .navbar-nav .collapse,
@@ -99,7 +98,6 @@ li {
 }
 
 .jumbotron {
-  /* margin-bottom: 70px; */
   font-family: "Ultra", sans-serif;
 }
 
@@ -156,7 +154,7 @@ li {
 }
 
 #gallery-header h1 {
-  margin: 20px 0 50px 0;
+  margin: 50px 0 50px 0;
 }
 
 #gallery-details img {
@@ -175,7 +173,9 @@ li {
 }
 
 .gallery-container {
-  padding: 50px;
+  height: 100%;
+  margin: auto;
+  padding-top: 30px;
 }
 
 .gallery-section {
@@ -199,7 +199,7 @@ li {
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1200px) {
   .gallery-column {
     flex: 50%;
     max-width: 50%;
@@ -207,7 +207,7 @@ li {
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   .gallery-column {
     flex: 100%;
     max-width: 100%;
@@ -260,10 +260,6 @@ li {
   font-weight: 700;
 }
 
-/* https://codepen.io/pa_patki/pen/GxVMEo - used to create image gallery with modal */
-
-/* used from stackoverflow */
-
 #open-details {
   height: auto;
   width: 100%;
@@ -284,40 +280,6 @@ li {
   margin-bottom: 20px;
 }
 
-/* GALLERY MEDIA QUERIES */
-
-/* @media screen and (max-width: 300px) {
-  .gallery-images {
-    flex: 25%;
-    width: 25%;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .gallery-images {
-    flex: 50%;
-    max-width: 50%;
-  }
-}
-@media screen and (max-width: 1100px) {
-  .gallery-images {
-    flex: 25%;
-    max-width: 100%;
-  }
-}
-@media screen and (max-width: 600px) {
-  .gallery-images {
-    flex: 50%;
-    max-width: 100%;
-  }
-} */
-
-/* MEMBERS AREA */
-
-/* .members-callout {
-  padding: 10px;
-} */
-
 .members-container {
   padding: 50px 40px 40px 40px;
   height: 100vh;
@@ -327,14 +289,6 @@ li {
     linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
   background-blend-mode: overlay;
   background-size: cover;
-
-  /* background: url(images/golf2.jpg) no-repeat center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; */
-
-  /* display: flex; */
   align-items: center;
   justify-content: center;
 
